url-shortener/gitops/overlays/prod/database.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-db-lb
  annotations:
    external-dns.kubernetes.io/hostname: url-shortener-db.k8s.homelab.grncunha.com
